@@ -1,3 +1,8 @@
+2005-09-13  Don Porter	<dgp@users.sourceforge.net>
+
+	* win/winMain.c (WishPanic):	Replaced TCL_VARARGS* macros with
+	direct use of stdarg.h conventions.
+
 2005-09-11  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXMouseEvent.c (TkMacOSXProcessMouseEvent): check if
